@@ -1,0 +1,9 @@
+.woocommerce-timeline
+	.woocommerce-timeline-item
+	.woocommerce-timeline-item__body {
+	.fee-breakdown-list {
+		list-style-type: disc;
+		margin-left: 16px;
+		line-height: 1.5;
+	}
+}
