@@ -234,6 +234,7 @@ Array [
     "body": Array [
       "1,00 EUR → 1.19944 USD: $21.59 USD",
       "Fee (2.9% + $0.30): $-0.62",
+      undefined,
       "Net deposit: $20.97 USD",
     ],
     "date": 2020-04-01T14:37:54.000Z,
@@ -282,6 +283,7 @@ Array [
     "body": Array [
       "1,00 EUR → 1.19944 USD: $21.59 USD",
       "Fee: €0,52",
+      undefined,
       "Net deposit: $20.97 USD",
     ],
     "date": 2020-04-01T14:37:54.000Z,
@@ -497,6 +499,22 @@ Array [
     "body": Array [
       undefined,
       "Fee (1.95% + $0.15): $-3.50",
+      <ul
+        className="fee-breakdown-list"
+      >
+        <li>
+          Base fee: 1.4% + £0.20
+        </li>
+        <li>
+          International card fee: 1.5%
+        </li>
+        <li>
+          Foreign exchange fee: 2%
+        </li>
+        <li>
+          Discount: -4.9% + £-0.20
+        </li>
+      </ul>,
       "Net deposit: $59.50 USD",
     ],
     "date": 2020-04-01T14:37:54.000Z,
@@ -545,6 +563,7 @@ Array [
     "body": Array [
       undefined,
       "Fee: $3.50",
+      undefined,
       "Net deposit: $59.50 USD",
     ],
     "date": 2020-04-01T14:37:54.000Z,
@@ -741,6 +760,55 @@ Array [
     ],
     "date": 2020-04-03T18:58:01.000Z,
     "headline": "A payment of $50.00 was successfully refunded.",
+    "icon": <t
+      className="is-success"
+      icon="checkmark"
+      size={24}
+    />,
+  },
+]
+`;
+
+exports[`mapTimelineEvents single currency events should not render fee breakup when fee history is not present 1`] = `
+Array [
+  Object {
+    "body": Array [],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": "Payment status changed to Paid.",
+    "icon": <t
+      className=""
+      icon="sync"
+      size={24}
+    />,
+  },
+  Object {
+    "body": Array [],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": <React.Fragment>
+      $59.50 USD was added to your 
+      <Link
+        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b281"
+        type="wc-admin"
+      >
+        Apr 2, 2020 deposit
+      </Link>
+      .
+    </React.Fragment>,
+    "icon": <t
+      className=""
+      icon="plus"
+      size={24}
+    />,
+  },
+  Object {
+    "body": Array [
+      undefined,
+      "Fee (1.95% + $0.15): $-3.50",
+      undefined,
+      "Net deposit: $59.50 USD",
+    ],
+    "date": 2020-04-01T14:37:54.000Z,
+    "headline": "A payment of $63.00 USD was successfully charged.",
     "icon": <t
       className="is-success"
       icon="checkmark"
